--- a/src/App.css
+++ b/src/App.css
@@ -61,9 +61,8 @@ body {
 }
 
 .reflectionsButton {
-  display: block;
   margin: 0 auto 1% auto;
-  height: 4em;
+  width: 80%;
 }
 
 .xbutton {
@@ -82,7 +81,7 @@ body {
 
 .alignBottom {
   position: absolute;
-  bottom: 30%;
+  bottom: 15%;
   left: 0;
   width: 100%;
 }
@@ -95,6 +94,8 @@ body {
 .margin1 {
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px
 }
 
 
@@ -107,12 +108,14 @@ body {
   border: 3px solid;
   border-color: #66FCF1;
   border-radius: 15px;
+  height: 50vh;
 }
 
 .graphContainer {
   display: flex;
   /* background-color: rgb(34, 40, 49); */
   padding: 3% 3% 1% 3%;
+  height: 100%;
 }
 
 .barContainer {
@@ -123,4 +126,18 @@ body {
 .bar {
   background-color: white;
   width: 80%;
+}
+
+
+@media only screen and (max-width: 1440px) {
+  .int {
+    font-size: 3vw !important;
+  }
+
+  .alignBottom {
+    position: absolute;
+    bottom: 5%;
+    left: 0;
+    width: 100%;
+  }
 }
